--- a/djangocms_topstory/templates/cms/plugins/topstory/index.html
+++ b/djangocms_topstory/templates/cms/plugins/topstory/index.html
@@ -1,13 +1,22 @@
-{% load staticfiles %}
+{% load staticfiles thumbnail %}
+
 {% if items %}
 <div id="swiper">
-  <a class="arrow-left" href="#"></a>
-  <a class="arrow-right" href="#"></a>
+  <a class="arrow arrow-left" href="#"><div></div></a>
+  <a class="arrow arrow-right" href="#"><div></div></a>
   <div class="swiper-container">
     <div class="swiper-wrapper">
       {% for item in items %}
         <div class="swiper-slide">
-          <img src="{{ item.image.url }}" />
+          <img src="{{ item.image|thumbnail_url:item.size }}" alt="{{ item.title }}" />
+          {% if item.title or item.description %}
+              <div class="swiper-teaser
+              {% if item.teaser_position == 'left' %}swiper-teaser-left{% else %}swiper-teaser-right{% endif %}
+              swiper-teaser-layout-{{ item.teaser_layout }}">
+                {% if item.title %}<h1>{{ item.title }}</h1>{% endif %}
+                {% if item.description %}<p>{{ item.description }}</p>{% endif %}
+              </div>
+          {% endif %}
         </div>
       {% endfor %}
     </div>
