--- a/djangocms_topstory/templates/cms/plugins/topstory/index.html
+++ b/djangocms_topstory/templates/cms/plugins/topstory/index.html
@@ -4,10 +4,10 @@
 <div id="swiper">
   <a class="arrow arrow-left" href="#"><div></div></a>
   <a class="arrow arrow-right" href="#"><div></div></a>
-  <div class="swiper-container">
+  <div class="swiper-container" style="width: {{ instance.width }}; height: {{ instance.height }};">
     <div class="swiper-wrapper">
       {% for item in items %}
-        <div class="swiper-slide">
+        <div class="swiper-slide" style="width: {{ instance.width }}; height: {{ instance.height }};">
           <img src="{{ item.image|thumbnail_url:item.size }}" alt="{{ item.title }}" />
           {% if item.title or item.description %}
               <div class="swiper-teaser
